--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Raleway", Arial, Helvetica, sans-serif;
+-webkit-text-size-adjust: none;
 }
 
 html {
@@ -10,6 +11,7 @@ html {
   font-family: reross-rectangular, sans-serif;
   font-weight: 400;
   font-style: normal;
+  -webkit-text-size-adjust: -120%;
 }
 
 a:hover {
@@ -75,12 +77,20 @@ nav {
     box-decoration-break: clone;
 }
 
+.menu-button {
+padding: auto;
+width: 150px;
+height: 45px;
+text-align: center;
+box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.6);
+}
+
 .nav-links li a {
   color: white;
   text-decoration: none;
-  font-size: 1.7vh;
+  font-size: 2vh;
   border: solid 0.1px white;
-  padding: 0.7em 1em;
+  padding: 0.9em 0.2em 0.8em 0.2em;
   text-shadow: 1px 2px rgba(0, 0, 0, 0.6);
 }
 
@@ -311,9 +321,9 @@ box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   border: 0.1px solid rgba(192, 89, 127, 0.2);
   color: #D81B60;
   padding: 0.8em 1em;
-  font-size: 12px;
+  font-size: 11px;
   letter-spacing: 0.1px;
-  font-weight: 600;
+  font-weight: 400;
   position: relative;
   line-height: 1.15384615;
   display: inline-block;
@@ -334,14 +344,14 @@ box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .choose-music-service {
-  width: 60%;
+  width: 50%;
   background: transparent;
   border: 0.1px solid rgba(192, 89, 127, 0.2);
   color: #D81B60;
-  padding: 0.8em 1em;
-  font-size: 12px;
-  letter-spacing: 0.1px;
-  font-weight: 600;
+  padding: 0.9em 0.2em 0.8em 0.2em;
+  font-size: 11px;
+  letter-spacing: 0.2px;
+  font-weight: 400;
   position: relative;
   line-height: 1.15384615;
   display: inline-block;
@@ -752,7 +762,7 @@ color: #D81B60;
   font-size: 12px;
   font-weight: 500;
   margin: 0 18px 0 23px;
-  box-shadow: 2px 2px 4px #D81B60; 
+  box-shadow: 1px 3px 3px #D81B60; 
   cursor: pointer;
 }
 
@@ -983,7 +993,7 @@ margin-bottom: 10px;
   border: 0.3px solid rgba(192, 89, 127, 0.6);
   color: #D81B60;
   padding: 0.8em 1em;
-  font-size: 14px;
+  font-size: 13px;
   letter-spacing: 0.2px;
   font-weight: 600;
   display: inline-block;
@@ -1139,7 +1149,7 @@ color: black;
   margin: 20px 20px 50px 20px;
   }
  .choose-music-service {
-  width: 75%;
+  width: 50%;
   margin: 10px 0 10px 10px;
   font-size: 10px;
  }
